--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-	<section class="header">
+	<header>
 		<div class="logo"><a href="#start"><img src="images/ad-logo.png" class="logo"></a></div>
 		<nav class="menu">
 			<a href="#" class="mobile-only btn hamburger">&#9776;</a>
@@ -30,7 +30,7 @@
 				<li><a href="#contact-section">CONTACT</a></li>
 			</ul>
 		</nav>
-	</section>
+	</header>
 	
 	<section class="banner" id="start">
 		<h2>HI, I'M ADAM.</h2>
@@ -41,7 +41,7 @@
 		<div class="column">
 			<div class="services-circles"><img src="images/content-icon.png" class="icons"/></div>
 			<h3>Content Development</h2>
-			<p>Writing and editing for technical communications, marketing collateral, and and almost any other copy that needs polishing.</p>
+			<p>Writing and editing for technical communications, marketing collateral, and almost any other copy that needs a wordsmith.</p>
 		</div>
 
 		<div class="column">
@@ -53,7 +53,7 @@
 		<div class="column">
 			<div class="services-circles"><img src="images/web-design-icon.png" class="icons"/></div>
 			<h3>Web Design and Development</h2>
-			<p>Taking your visual presence online with responsive website design and front-end development.</p>
+			<p>Responsive website design and front-end development.</p>
 		</div>
 	</section>
 
@@ -63,20 +63,6 @@
 		<h2>DESIGN PORTFOLIO</h2>
 		
 		<div class="container">
-
-		<div class="portfolio">
-			<a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA.">
-				<img src="images/atown-logo-sm.png" class="thumbnail"/>
-					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-			</a>
-		</div>
-
-		<div class="portfolio">
-			<a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project.">
-				<img src="images/beyond-data-infographic-sm.png" class="thumbnail"/>
-					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-			</a>
-		</div>
 		
 		<div class="portfolio">
 			<a href="images/cosmic-infographic.png" data-lightbox="gallery" data-title="Infographic/two-page spread on small satellites in the commercial space industry.">
@@ -91,6 +77,19 @@
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
+
+		<div class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement.">
+			<img src="images/reezig-ad-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
+
+		<div class="portfolio">
+			<a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project.">
+				<img src="images/beyond-data-infographic-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>		
 
 		<div class="portfolio">
 			<a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia.">
@@ -137,6 +136,13 @@
 			</a>
 		</div>
 
+		<div class="portfolio">
+			<a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA.">
+				<img src="images/atown-logo-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
+
 		<div class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks.">	<img src="images/lte25-ui-sm.png" class="thumbnail"/>
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
@@ -144,13 +150,6 @@
 
 		<div class="portfolio"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller.">
 			<img src="images/novations-logo-sm.png" class="thumbnail"/>
-				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-			</a>
-		</div>
-
-
-		<div class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement.">
-			<img src="images/reezig-ad-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
