--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 	<header>
-		<div class="logo">ADAM DOVE</div>
+		<div class="logo">AD</div>
 		<nav class="menu">
 			<a href="#" class="mobile-only btn hamburger">&#9776;</a>
 			<ul class="desktop-only navigation">
@@ -34,7 +34,7 @@
 	
 	<section class="banner" id="start">
 		<h1>HI, I'M ADAM.</h1>
-		<p>I specialize in visual design, ranging from print to websites and mobile apps. My focus is on creating clean, engaging experiences from strategy through execution. </p>
+		<p class="body-copy">I specialize in visual design, ranging from print to websites and mobile apps.<br /> My focus is on creating clean, engaging experiences from strategy through execution. </p>
 		<a href="#portfolio-section" class="cta">View my work</a>
 	</section>
 
@@ -43,7 +43,16 @@
 		</div>
 
 		<h2>About</h2>
-		<p class="body-copy">Scenester venmo single-origin coffee, humblebrag brunch put a bird on it cardigan organic polaroid heirloom kogi 3 wolf moon fap raw denim. Gentrify plaid intelligentsia, biodiesel dreamcatcher austin narwhal sartorial vice synth quinoa. Typewriter lomo ramps schlitz, +1 waistcoat wolf seitan paleo kitsch craft beer. Lo-fi food truck cardigan aesthetic, banjo skateboard ugh craft beer pitchfork sriracha slow-carb messenger bag YOLO pinterest.</p>
+		<p class="body-copy">
+			Capabilities include:
+		<ul class="body-copy">
+				<li>Logos and branding packages</li>
+				<li>Print design</li>
+				<li>Web design</li>
+				<li>Front-end web development</li>
+				<li>User interface design</li>
+			</ul>
+		</p>
 	</section>
 
 	<section id="portfolio-section">
@@ -143,12 +152,6 @@
 			</a>
 		</div>
 
-		<div class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJs Team House.">
-			<img src="images/teamhouse-logo-sm.png" class="thumbnail" />
-				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-			</a>
-		</div>
-
 		<div class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb.">
 			<img src="images/waxlimb-poster-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
@@ -161,23 +164,25 @@
 
 	<section class="contact" id="contact-section">
 		<h2>CONTACT</h2>
-		<p class="body-copy">Need visual design, user interface, or front-end development work on an upcoming project? <br/>Let's talk. Send me an email or connect online.</p>
+		<p class="body-copy">Need visual design or front-end development work on an upcoming project?<br/><strong>Let's talk.</strong> <a href="mailto:adam.d.dove@gmail.com" target="_blank">Send me an email</a> or connect online.</p>
 		<div class="social-icons">
-			<a href="https://www.linkedin.com/in/adamdove" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+			<a href="mailto:adam.d.dove@gmail.com" target="_blank">
+			<i class="fa fa-envelope-o fa-3x"></i></a>
 		</div>
 		<div class="social-icons">
-			<a href="https://www.twitter.com/adamdove" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+			<a href="https://www.linkedin.com/in/adamdove" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
 		</div>
 		<div class="social-icons">
 			<a href="https://github.com/adamdove11" target="_blank">
 			<i class="fa fa-github-square fa-3x"></i></a>
 		</div>
-		<div class="social-icons">
-			<a href="mailto:adam.d.dove@gmail.com" target="_blank">
-			<i class="fa fa-envelope-o fa-3x"></i></a>
-		</div>
+
 
 	</section>
+
+	<footer>
+			<p>&copy; Adam Dove 2016. Built with HTML and CSS.<p>
+	</footer>
 
 	<script src="assets/lightbox/js/jquery-1.11.0.min.js"></script>
 
