responsiveness and portfolio additions

--- a/index.html
+++ b/index.html
@@ -34,23 +34,24 @@
 	
 	<section class="banner" id="start">
 		<h1>HI, I'M ADAM.</h1>
-		<p class="body-copy">I specialize in visual design, ranging from print to websites and mobile apps.<br /> My focus is on creating clean, engaging experiences from strategy through execution. </p>
+		<p class="body-copy">I specialize in visual design, ranging from websites and mobile apps to logos and branding packages. My focus is creating clean, engaging experiences from strategy through execution. </p>
 		<a href="#portfolio-section" class="cta">View my work</a>
 	</section>
 
 	<section class="about" id="about">
-		<div class="headshot">
-		</div>
+		<!--<div class="headshot">
+		</div>-->
 
 		<h2>About</h2>
 		<p class="body-copy">
-			Capabilities include:
-		<ul class="body-copy">
+			My design process is strategic, starting with in-depth research and an exploration of the project's goals and audience. I iterate constantly to make sure I get it right. And with a background in technical communication, I have a keen eye for clarity, concision, and a knack for making complex content usable. My services include:</p>
+		<ul class="list">
 				<li>Logos and branding packages</li>
 				<li>Print design</li>
 				<li>Web design</li>
 				<li>Front-end web development</li>
 				<li>User interface design</li>
+				<li>Infographics and data visualization</li>
 			</ul>
 		</p>
 	</section>
@@ -61,6 +62,13 @@
 		<h2>PORTFOLIO</h2>
 		
 		<div class="container">
+
+		<div class="portfolio">
+			<a href="images/virtual-valley-large.png" data-lightbox="gallery" data-title="User interface design for Virtual Valley, a web application that serves as a resource for education on startup technologies.">
+				<img src="images/virtual-valley-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>	
 		
 		<div class="portfolio">
 			<a href="images/cosmic-infographic.png" data-lightbox="gallery" data-title="Infographic/two-page spread on small satellites in the commercial space industry.">
@@ -70,10 +78,16 @@
 		</div>
 		
 		<div class="portfolio">
-			<a href="images/cosmic-website.jpg" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry.">
+			<a href="images/cosmic-large.png" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry.">
 				<img src="images/cosmic-website-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
+		</div>
+
+		<div class="portfolio"><a href="images/fitd-logo.png" data-lightbox="gallery" data-title="Logo for Fitd, a mobile app that maintains a user's virtual closet and generates fashion recommendations.">
+			<img src="images/fitd-logo-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
 		</div>
 
 		<div class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement.">
@@ -82,30 +96,22 @@
 			</a>
 		</div>
 
-		<div class="portfolio">
-			<a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project.">
-				<img src="images/beyond-data-infographic-sm.png" class="thumbnail"/>
-					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+		<div class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis.">
+			<img src="images/redwood-infographic-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
-		</div>		
+		</div>	
 
-		<div class="portfolio">
-			<a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia.">
-				<img src="images/crittonhollow-logo-sm.png" class="thumbnail"/>
-					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-				</a>
+		<div class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks.">	<img src="images/lte25-ui-sm.png" class="thumbnail"/>
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
 		</div>
+
+		
 
 		<div class="portfolio">
 			<a href="images/cyber-reboot-logo.png" data-lightbox="gallery" data-title="Logo for a cybersecurity lab working with the U.S. government.">
 				<img src="images/cyber-reboot-logo-sm.png" class="thumbnail"/>
-					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-				</a>
-		</div>
-
-		<div class="portfolio">
-			<a href="images/etherstack-ad1.png" data-lightbox="gallery" data-title="Print advertisement for Etherstack, a wireless communications technology company.">
-				<img src="images/etherstack-ad1-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
@@ -128,11 +134,13 @@
 			</a>
 		</div>
 
-		<div class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis.">
-			<img src="images/redwood-infographic-sm.png" class="thumbnail" />
-				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+		<div class="portfolio">
+			<a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project.">
+				<img src="images/beyond-data-infographic-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
-		</div>
+		</div>		
+		
 
 		<div class="portfolio">
 			<a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA.">
@@ -141,10 +149,13 @@
 			</a>
 		</div>
 
-		<div class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks.">	<img src="images/lte25-ui-sm.png" class="thumbnail"/>
-				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
-			</a>
+		<div class="portfolio">
+			<a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia.">
+				<img src="images/crittonhollow-logo-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
 		</div>
+	
 
 		<div class="portfolio"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller.">
 			<img src="images/novations-logo-sm.png" class="thumbnail"/>
@@ -164,7 +175,7 @@
 
 	<section class="contact" id="contact-section">
 		<h2>CONTACT</h2>
-		<p class="body-copy">Need visual design or front-end development work on an upcoming project?<br/><strong>Let's talk.</strong> <a href="mailto:adam.d.dove@gmail.com" target="_blank">Send me an email</a> or connect online.</p>
+		<p class="body-copy">Need visual design or front-end development work on an upcoming project?<br/><strong>Let's talk.</strong> <a href="mailto:adam.d.dove@gmail.com" target="_blank">Send me an email</a>.</p>
 		<div class="social-icons">
 			<a href="mailto:adam.d.dove@gmail.com" target="_blank">
 			<i class="fa fa-envelope-o fa-3x"></i></a>
