add UX case study
add UX case study to portfolio section and CSS for a highlighted
portfolio item

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 	<section class="banner" id="start">
 		<h1>HI, I'M ADAM.</h1>
-		<p class="body-copy">I specialize in visual design, ranging from websites and mobile apps to logos and branding packages. My focus is creating clean, engaging experiences from strategy through execution. </p>
+		<p class="body-copy">I specialize in design solutions, from UX/UI and web design to logos and branding packages. My focus is creating clean, engaging experiences from strategy through execution. </p>
 		<a href="#portfolio-section" class="cta">View my work</a>
 	</section>
 
@@ -46,12 +46,12 @@
 		<p class="body-copy">
 			My design process is strategic, starting with in-depth research and an exploration of the project's goals and audience. I iterate constantly to make sure I get it right. And with a background in technical communication, I have a keen eye for clarity, concision, and a knack for making complex content usable. My services include:</p>
 		<ul class="list">
+				<li>User experience design</li>
+				<li>User interface design</li>
+				<li>Web design and front-end development</li>
+				<li>Infographics and data visualization</li>
 				<li>Logos and branding packages</li>
 				<li>Print design</li>
-				<li>Web design</li>
-				<li>Front-end web development</li>
-				<li>User interface design</li>
-				<li>Infographics and data visualization</li>
 			</ul>
 		</p>
 	</section>
@@ -59,9 +59,19 @@
 	<section id="portfolio-section">
 
 		<div class="grid">
-		<h2>PORTFOLIO</h2>
+		<h>PORTFOLIO</h2>
 		
 		<div class="container">
+
+		<div class="case-study">
+			<a href="assets/shifty-case-study.pdf">
+				<img src="images/shifty-case-study.png" />
+			
+			<div class="after">
+			<a class="cta" href="assets/shifty-case-study.pdf" target="blank">UX Case Study: Shifty</a> 
+		</div>
+		</a>
+		</div>
 
 		<div class="portfolio">
 			<a href="images/virtual-valley-large.png" data-lightbox="gallery" data-title="User interface design for Virtual Valley, a web application that serves as a resource for education on startup technologies.">
@@ -175,7 +185,7 @@
 
 	<section class="contact" id="contact-section">
 		<h2>CONTACT</h2>
-		<p class="body-copy">Need visual design or front-end development work on an upcoming project?<br/><strong>Let's talk.</strong> <a href="mailto:adam.d.dove@gmail.com" target="_blank">Send me an email</a>.</p>
+		<p class="body-copy">Need design work for an upcoming project?<br/><strong>Let's talk.</strong> <a href="mailto:adam.d.dove@gmail.com" target="_blank">Send me an email</a>.</p>
 		<div class="social-icons">
 			<a href="mailto:adam.d.dove@gmail.com" target="_blank">
 			<i class="fa fa-envelope-o fa-3x"></i></a>
