--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 	<section class="banner" id="start">
 		<h1>HI, I'M ADAM.</h1>
-		<p class="body-copy">I specialize in design solutions, from UX/UI and web design to logos and branding packages. My focus is creating clean, engaging experiences from strategy through execution. </p>
+		<p class="body-copy">I specialize in digital design solutions, from UX/UI design to web design and front-end development. My focus is creating clean, engaging experiences from strategy through execution. </p>
 		<a href="#portfolio-section" class="cta">View my work</a>
 	</section>
 
