--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
 		</div>
 
 		<div class="portfolio">
+			<a href="images/shifty-lg.png" data-lightbox="gallery" data-title="UX and UI design for Shifty, a mobile app providing route alerts for cyclists based on crowdsourced issues. Clickable prototype: https://invis.io/PH6O5R5YM#/156385020_Landing_Page">
+				<img src="images/shifty-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>	
+
+		<div class="portfolio">
 			<a href="images/virtual-valley-large.png" data-lightbox="gallery" data-title="User interface design for Virtual Valley, a web application that serves as a resource for education on startup technologies.">
 				<img src="images/virtual-valley-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
@@ -173,11 +180,13 @@
 			</a>
 		</div>
 
+		<!--
 		<div class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb.">
 			<img src="images/waxlimb-poster-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
+		-->
 
 		</div>
 
